...
                        placeholder="Email"
                        placeholderTextColor="rgba(0,0,0,1)"
                        onChangeText={(text) => setEmail(text)}
                        value={email}
                        secureTextEntry={false}
                        style={styles.usernameInput}
                        testID={'email'}
                    />
                </View>
                <View style={styles.textBox}>
                    <MaterialCommunityIconsIcon
                        name="key"
                        style={styles.iconCircle}
...
                        secureTextEntry={true}
                        textContentType="oneTimeCode"
                        style={styles.passwordInput}
                        onChangeText={(text) => setPassword(text)}
                        value={password}
                        placeholderTextColor="rgba(0,0,0,1)"
                        testID={'password'}
                    />
                </View>
                <TouchableOpacity
                    style={styles.loginContainer}
                    onPress={() => onLoginPress()}
                    testID={'login'}>
                    <Text style={styles.loginText}>Login</Text>
                </TouchableOpacity>
                <TouchableOpacity
                    style={styles.createAccountContainerAndroid}
                    onPress={() => setDialogVisible(!dialogVisible)}
                    testID={'createAccount'}>
                    <Text style={styles.createAccountText}>Create Account</Text>
...
