...
  const deleteConfirmation = () => {
    Alert.alert(
      'Delete ' + studentName,
      'Are you sure you want to delete ' + studentName + '\'s account?',
      [
        { text: 'Cancel', onPress: () => { } },
        { text: 'Delete', onPress: () => deleteChild(studentName, studentId)}
      ],
      { cancelable: true },
    );
  }


  return (
    <View style={[styles.container, props.style]}>
      <View style={backgroundStyle(color)}>
        <TouchableOpacity
          style={styles.deleteButton}
          testID={'deletetester'}
          onPress={() => { deleteConfirmation() }}>
          <Entypo name="cross" color="#d3d3d3" size={30} testID={'deletetester'}/>
        </TouchableOpacity>
        <Text style={styles.initial}>{name}</Text>
      </View>
      <Text style={styles.name}>{props.name}</Text>
...
